@@ -1,3 +1,7 @@
+## About
+
+This is project about recreation of old RTS game [Dark Reign: The Future of War](http://en.wikipedia.org/wiki/Dark_Reign:_The_Future_of_War) by using HTML5 technologies.
+
 ## How to run the game
 
 1. Download files from GitHub
