@@ -28,7 +28,7 @@ CenterBridgeBuilding.sell_time = 2;
 CenterBridgeBuilding.health_max = 400;
 CenterBridgeBuilding.energy = 0;
 CenterBridgeBuilding.crater = 7;
-CenterBridgeBuilding.enabled = true;
+CenterBridgeBuilding.enabled = Array.factory(PLAYERS_COUNT, true);
 CenterBridgeBuilding.can_build = true;
 CenterBridgeBuilding.is_bridge = true;
 CenterBridgeBuilding.is_built_from_edge = true;
