@@ -28,7 +28,7 @@ HorizontalBridgeBuilding.sell_time = 1;
 HorizontalBridgeBuilding.health_max = 400;
 HorizontalBridgeBuilding.energy = 0;
 HorizontalBridgeBuilding.crater = 8;
-HorizontalBridgeBuilding.enabled = true;
+HorizontalBridgeBuilding.enabled = Array.factory(PLAYERS_COUNT, true);
 HorizontalBridgeBuilding.can_build = true;
 HorizontalBridgeBuilding.is_bridge = true;
 HorizontalBridgeBuilding.is_built_from_edge = true;
