@@ -28,7 +28,7 @@ VerticalBridgeBuilding.sell_time = 1;
 VerticalBridgeBuilding.health_max = 400;
 VerticalBridgeBuilding.energy = 0;
 VerticalBridgeBuilding.crater = 9;
-VerticalBridgeBuilding.enabled = true;
+VerticalBridgeBuilding.enabled = Array.factory(PLAYERS_COUNT, true);
 VerticalBridgeBuilding.can_build = true;
 VerticalBridgeBuilding.is_bridge = true;
 VerticalBridgeBuilding.is_built_from_edge = true;
