@@ -2433,7 +2433,7 @@ function Level1()
 		game.addPlayer(new Player('#ffffbb', 'yellow', PLAYER_HUMAN));
 		game.addPlayer(new Player('#fc3c58', 'red', PLAYER_COMPUTER1));
 		
-		AbstractUnit.createNew(TachyonTankUnit, 63, 4, PLAYER_HUMAN, true);
+		AbstractUnit.createNew(ConstructionRigUnit, 63, 4, PLAYER_HUMAN, true);
 		AbstractUnit.createNew(ConstructionRigUnit, 66, 4, PLAYER_HUMAN, true);
 		AbstractUnit.createNew(ConstructionRigUnit, 64, 6, PLAYER_HUMAN, true);
 		
