@@ -1003,7 +1003,7 @@ AbstractUnit.setUnitCommonOptions = function(obj)
 	obj.cost = 0;
 	obj.health_max = 100;
 	obj.speed = 0.91;      // (0.1365*speed)/0.9 [SetPhysics(mass speed)] {0.9 - should be dynamic game speed coeficient}
-	obj.enabled = false;
+	obj.enabled = Array.factory(PLAYERS_COUNT, false);
 	obj.is_human = false;
 	obj.shield_type = 'ToughHumanWet';
 	obj.move_mode = MOVE_MODE_GROUND;
